# k8scost

./: AUDIT.md  Dockerfile  INTEGRATIONS.md  INTEROP.md  README.md  ROADMAP.md  install.ps1  install.sh  layman.md  pyproject.toml
.github/workflows/: ci.yml
demos/01-basic/: SCENARIO.md  workloads.json
deploy/: docker-compose.yml  k8s.yaml
deploy/terraform/: main.tf
docs/: ADVANCED.md  ARCHITECTURE.md  DEPLOY.md  INSTALL.md
examples/: help.txt  version.txt
integrations/: webhook.py
k8scost/: __init__.py  __main__.py  cli.py  connect.py  core.py  mcp_server.py
ports/: README.md
ports/go/: go.mod  main.go
ports/javascript/: index.js  package.json
ports/rust/: Cargo.toml
ports/rust/src/: main.rs
tests/: test_connect.py  test_hardening.py  test_smoke.py
